--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,11 @@
         "friends-of-behat/symfony-extension": "^2.1",
         "friends-of-behat/variadic-extension": "^1.3",
         "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
+        "j13k/yaml-lint": "^1.1",
         "lakion/mink-debug-extension": "^2.0.0",
+        "php-parallel-lint/php-parallel-lint": "^1.2",
+        "phpmd/phpmd": "^2.8",
+        "phpro/grumphp": "^1.1.0",
         "phpspec/phpspec": "^7.0",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan": "0.12.74",
@@ -37,13 +41,16 @@
         "phpstan/phpstan-strict-rules": "^0.12.0",
         "phpstan/phpstan-webmozart-assert": "0.12.12",
         "phpunit/phpunit": "^9.5",
-        "sensiolabs/security-checker": "^6.0",
-        "sylius-labs/coding-standard": "^3.1",
+        "povils/phpmnd": "^2.2",
+        "seld/jsonlint": "^1.7",
+        "sylius-labs/coding-standard": "^3.0",
         "symfony/browser-kit": "^4.4 || ^5.2",
         "symfony/debug-bundle": "^4.4 || ^5.2",
         "symfony/dotenv": "^4.4 || ^5.2",
         "symfony/intl": "^4.4 || ^5.2",
         "symfony/web-profiler-bundle": "^4.4 || ^5.2",
+        "symplify/easy-coding-standard": "^8.3",
+        "thecodingmachine/phpstan-strict-rules": "^0.12.0",
         "vimeo/psalm": "4.4.1"
     },
     "config": {
@@ -66,6 +73,7 @@
         ]
     },
     "scripts": {
+        "fix-ecs": "ecs check src tests/PHPUnit --config=dev/ruleset/easy-coding-standard.yml --no-progress-bar --ansi --fix",
         "post-install-cmd": [
             "php bin/create_node_symlink.php"
         ],
