--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,8 +5,8 @@
          colors="true"
          bootstrap="tests/Application/config/bootstrap.php">
     <testsuites>
-        <testsuite name="AcmeSyliusExamplePlugin Test Suite">
-            <directory>tests</directory>
+        <testsuite name="SynoliaSyliusGDPRPlugin Test Suite">
+            <directory>tests/PHPUnit</directory>
         </testsuite>
     </testsuites>
 
