--- a/src/Resources/mappings/ShopUser.yaml
+++ b/src/Resources/mappings/ShopUser.yaml
@@ -2,3 +2,36 @@ Sylius\Component\Core\Model\ShopUser:
     attributes:
         username:
             faker: email
+            unique: true
+        usernameCanonical:
+            faker: email
+            unique: true
+        salt:
+            faker: text
+            args: [60]
+        password:
+            faker: sha256
+        lastLogin:
+            faker: dateTime
+        emailVerificationToken:
+            faker: uuid
+        passwordResetToken:
+            faker: uuid
+        passwordRequestedAt:
+            faker: dateTime
+        verifiedAt:
+            faker: dateTime
+        locked:
+            faker: boolean
+            args: [100]
+        expiresAt:
+            faker: dateTime
+        credentialsExpireAt:
+            faker: dateTime
+        oauthAccounts:
+        email:
+            faker: email
+            unique: true
+        emailCanonical:
+            faker: email
+            unique: true
