--- a/tests/Application/config/routes.yaml
+++ b/tests/Application/config/routes.yaml
@@ -1,9 +1,3 @@
-synolia_sylius_gdpr_shop:
-    resource: "@SynoliaSyliusGDPRPlugin/Resources/config/shop_routing.yml"
-    prefix: /{_locale}
-    requirements:
-        _locale: ^[a-z]{2}(?:_[A-Z]{2})?$
-
 synolia_sylius_gdpr_admin:
-    resource: "@SynoliaSyliusGDPRPlugin/Resources/config/admin_routing.yml"
+    resource: "@SynoliaSyliusGDPRPlugin/Resources/config/routes/admin/*"
     prefix: /admin
