--- a/tests/PHPUnit/config/mappings/anon1.yml
+++ b/tests/PHPUnit/config/mappings/anon1.yml
@@ -6,3 +6,5 @@ Tests\Synolia\SyliusGDPRPlugin\PHPUnit\Fixtures\YamlFoo:
             value: 'anonymize@synolia.com'
         value:
             value: 'test-yaml-value'
+        nullValue:
+            value: null
