--- a/src/Resources/config/mappings/ShopUser.yaml
+++ b/src/Resources/config/mappings/ShopUser.yaml
@@ -3,17 +3,24 @@ Sylius\Component\Core\Model\ShopUser:
         username:
             faker: email
             unique: true
+            prefix: 'anonymized-'
         usernameCanonical:
             faker: email
             unique: true
+            prefix: 'anonymized-'
+        salt:
+            faker: text
+            args: [60]
+            prefix: 'anonymized-'
         password:
             faker: sha256
+            prefix: 'anonymized-'
         lastLogin:
             faker: dateTime
         emailVerificationToken:
-            faker: uuid
+            value: null
         passwordResetToken:
-            faker: uuid
+            value: null
         passwordRequestedAt:
             faker: dateTime
         verifiedAt:
