Add export data button in customer show

--- a/src/Resources/config/routes/admin/customer.yaml
+++ b/src/Resources/config/routes/admin/customer.yaml
@@ -2,3 +2,8 @@ synolia_sylius_gdpr_admin_anonymize_customer:
     path: /customers/{id}/anonymize
     methods: POST|GET
     controller: Synolia\SyliusGDPRPlugin\Controller\AnonymizationController
+
+synolia_sylius_gdpr_admin_export_customer_datas:
+    path: /customers/{id}/export-data
+    methods: POST|GET
+    controller: Synolia\SyliusGDPRPlugin\Controller\ExportDataController
