--- a/tests/Application/config/packages/test/synolia_gdpr.yaml
+++ b/tests/Application/config/packages/test/synolia_gdpr.yaml
@@ -1,5 +1,5 @@
 synolia_sylius_gdpr:
     anonymization:
         mappings:
-            path:
+            paths:
                 - '%kernel.project_dir%/../PHPUnit/config/mappings/'
