Fix iterative value with none object value + fix payment configuration

--- a/src/Resources/config/mappings/Payments.yaml
+++ b/src/Resources/config/mappings/Payments.yaml
@@ -1,5 +1,4 @@
 Sylius\Component\Core\Model\Payment:
     properties:
         details:
-            faker: text
-            prefix: 'anonymized-'
+            value: ['anonymized-details']
