--- a/src/Resources/config/serialization/Address.yaml
+++ b/src/Resources/config/serialization/Address.yaml
@@ -1,4 +1,4 @@
-Sylius\Component\Core\Model\Customer:
+Sylius\Component\Core\Model\Address:
     attributes:
         firstName: &defaultGroup
             groups:
