--- a/ruleset/phpstan.neon
+++ b/ruleset/phpstan.neon
@@ -21,3 +21,4 @@ parameters:
         - '#Variable method call on object.#'
         - '#Call to an undefined method Faker\\UniqueGenerator::format\(\).#'
         - "#^Call to an undefined method Symfony\\\\Component\\\\HttpFoundation\\\\Session\\\\SessionInterface\\:\\:getFlashBag\\(\\)\\.$#"
+        - '#.*Laminas\\Stdlib\\PriorityQueue*.#'
