--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4, 8.0]
+        php: [7.3, 7.4, 8.0, 8.1]
         symfony: [4.4.*, 5.2.*]
 
     steps:
@@ -81,8 +81,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4, 8.0]
-        sylius: [1.9.0, 1.10.0]
+        php: [7.3, 7.4, 8.0, 8.1]
+        sylius: [1.9.0, 1.10.0, 1.11.0]
         symfony: [4.4, 5.2]
         node: [10.x]
         exclude:
@@ -90,10 +90,16 @@ jobs:
               symfony: 4.4
           -   sylius: 1.9.0
               php: 8.0
+          -   sylius: 1.9.0
+              php: 8.1
           -   sylius: 1.10.0
               php: 7.3
           -   sylius: 1.10.0
               symfony: 4.4
+          -   sylius: 1.11.0
+              php: 7.3
+          -   sylius: 1.11.0
+              php: 7.4
 
     env:
       APP_ENV: test
