--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,16 +82,10 @@ jobs:
       fail-fast: false
       matrix:
         php: [7.3, 7.4, 8.0, 8.1]
-        sylius: [1.9.0, 1.10.0, 1.11.0]
+        sylius: [1.10.0, 1.11.0]
         symfony: [4.4, 5.2]
         node: [10.x]
         exclude:
-          -   sylius: 1.9.0
-              symfony: 4.4
-          -   sylius: 1.9.0
-              php: 8.0
-          -   sylius: 1.9.0
-              php: 8.1
           -   sylius: 1.10.0
               php: 7.3
           -   sylius: 1.10.0
