--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -81,17 +81,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4, 8.0, 8.1]
+        php: [7.4, 8.0, 8.1]
         sylius: [1.10.0, 1.11.0]
         symfony: [4.4, 5.2]
         node: [10.x]
         exclude:
           -   sylius: 1.10.0
-              php: 7.3
-          -   sylius: 1.10.0
               symfony: 4.4
-          -   sylius: 1.11.0
-              php: 7.3
           -   sylius: 1.11.0
               php: 7.4
 
