--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.3, 7.4, 8.0, 8.1]
+        php: [7.4, 8.0, 8.1]
         symfony: [4.4.*, 5.2.*]
 
     steps:
@@ -87,6 +87,8 @@ jobs:
         node: [10.x]
         exclude:
           -   sylius: 1.10.0
+              symfony: 4.4
+          -   sylius: 1.11.0
               symfony: 4.4
           -   sylius: 1.11.0
               php: 7.4
