--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -82,7 +82,8 @@ jobs:
         run: if [ -f grumphp.yml ]; then vendor/bin/grumphp run ; else echo Grumphp ruleset file does not exist, skipping step ; fi
         if: always() && steps.end-of-setup.outcome == 'success'
 
-      - uses: symfonycorp/security-checker-action@v3
+      - name: Checks security issues - Run
+        run: symfony security:check
         if: always() && steps.end-of-setup.outcome == 'success'
 
   sylius:
