--- a/composer.json
+++ b/composer.json
@@ -15,27 +15,26 @@
         "sylius/sylius": "~1.9.0 || ~1.10.0 || ~1.11.0"
     },
     "require-dev": {
-        "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
-        "j13k/yaml-lint": "^1.1",
-        "php-parallel-lint/php-parallel-lint": "^1.2",
-        "phpmd/phpmd": "^2.12",
-        "phpro/grumphp": "^1.3",
-        "phpstan/extension-installer": "^1.0",
+        "j13k/yaml-lint": "1.1.4",
+        "php-parallel-lint/php-parallel-lint": "1.3.2",
+        "phpmd/phpmd": "2.12.0",
+        "phpro/grumphp": "1.13.0",
+        "phpstan/extension-installer": "1.1.0",
         "phpstan/phpstan": "1.6.3",
         "phpstan/phpstan-doctrine": "1.3.3",
         "phpstan/phpstan-strict-rules": "1.2.1",
         "phpstan/phpstan-webmozart-assert": "1.1.2",
-        "phpunit/phpunit": "^9.5",
-        "povils/phpmnd": "^2.5",
-        "seld/jsonlint": "^1.7",
-        "sylius-labs/coding-standard": "4.1.*",
+        "phpunit/phpunit": "9.5.21",
+        "povils/phpmnd": "2.5.0",
+        "seld/jsonlint": "1.9.0",
+        "sylius-labs/coding-standard": "4.1.1",
         "symplify/easy-coding-standard": "9.4.70",
-        "symfony/browser-kit": "^4.4 || ^5.2",
-        "symfony/debug-bundle": "^4.4 || ^5.2",
-        "symfony/dotenv": "^4.4 || ^5.2",
-        "symfony/intl": "^4.4 || ^5.2",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "thecodingmachine/phpstan-strict-rules": "^1.0.0"
+        "symfony/browser-kit": "5.4.3",
+        "symfony/debug-bundle": "5.4.3",
+        "symfony/dotenv": "5.4.5",
+        "symfony/intl": "5.4.10",
+        "symfony/web-profiler-bundle": "5.4.10",
+        "thecodingmachine/phpstan-strict-rules": "1.0.0"
     },
     "config": {
         "sort-packages": true
