--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "license": "EUPL-1.2",
     "require": {
         "php": "^7.4 || ^8.0",
-        "sylius/sylius": "~1.9.0 || ~1.10.0 || ~1.11.0"
+        "sylius/sylius": "^1.9"
     },
     "require-dev": {
         "j13k/yaml-lint": "1.1.4",
