Remove php 7.4 and Sylius 1.9

--- a/composer.json
+++ b/composer.json
@@ -11,30 +11,31 @@
     ],
     "license": "EUPL-1.2",
     "require": {
-        "php": "^7.4 || ^8.0",
-        "sylius/sylius": "^1.9",
+        "php": "^8.0",
+        "sylius/sylius": "^1.10",
         "symfony/property-info": "^5.4|^6.0",
         "phpdocumentor/reflection-docblock": "^5.3"
     },
     "require-dev": {
         "j13k/yaml-lint": "1.1.4",
         "php-parallel-lint/php-parallel-lint": "1.3.2",
-        "phpmd/phpmd": "2.12.0",
-        "phpro/grumphp": "1.13.0",
-        "phpstan/extension-installer": "1.1.0",
-        "phpstan/phpstan": "1.8.2",
-        "phpstan/phpstan-doctrine": "1.3.11",
-        "phpstan/phpstan-strict-rules": "1.3.0",
-        "phpstan/phpstan-webmozart-assert": "1.2.0",
-        "phpunit/phpunit": "9.5.21",
-        "povils/phpmnd": "3.0.0",
+        "phpmd/phpmd": "2.13.0",
+        "phpro/grumphp": "1.15.0",
+        "phpstan/extension-installer": "1.2.0",
+        "phpstan/phpstan": "1.9.7",
+        "phpstan/phpstan-doctrine": "1.3.29",
+        "phpstan/phpstan-strict-rules": "1.4.4",
+        "phpstan/phpstan-webmozart-assert": "1.2.2",
+        "phpunit/phpunit": "9.5.27",
+        "povils/phpmnd": "3.0.1",
+        "rector/rector": "^0.15.2",
         "seld/jsonlint": "1.9.0",
-        "sylius-labs/coding-standard": "4.1.1",
-        "symfony/browser-kit": "5.4.3",
-        "symfony/debug-bundle": "5.4.3",
-        "symfony/dotenv": "5.4.5",
-        "symfony/intl": "5.4.10",
-        "symfony/web-profiler-bundle": "5.4.10",
+        "sylius-labs/coding-standard": "4.3.0",
+        "symfony/browser-kit": "6.0.11",
+        "symfony/debug-bundle": "6.0.11",
+        "symfony/dotenv": "6.0.5",
+        "symfony/intl": "6.0.15",
+        "symfony/web-profiler-bundle": "6.0.17",
         "thecodingmachine/phpstan-strict-rules": "1.0.0"
     },
     "config": {
