fix install instruction for routes

--- a/install/Application/config/routes/gdpr.yaml
+++ b/install/Application/config/routes/gdpr.yaml
@@ -1,4 +1,2 @@
-synolia_gdpr_controller:
-    resource: "@SynoliaSyliusGDPRPlugin/Resources/config/routes/admin/gdpr.yaml"
-    prefix: '%sylius_admin.path_name%/gdpr/'
-    name_prefix: 'sylius_gdpr_'
+synolia_gdpr:
+    resource: "@SynoliaSyliusGDPRPlugin/Resources/config/routes.yaml"
