fix: move admin customer show gdpr block template into another place in order to be overrode properly

--- a/src/Resources/config/packages/ui.yaml
+++ b/src/Resources/config/packages/ui.yaml
@@ -2,4 +2,4 @@ sylius_ui:
     events:
         sylius.admin.customer.show.information:
             blocks:
-                gdpr: '@SynoliaSyliusGDPRPlugin\AdminBundle\Customer\Show\gdpr.html.twig'
+                gdpr: '@SynoliaSyliusGDPRPlugin\Admin\Customer\Show\gdpr.html.twig'
