feat(anonymizer): allow expression language as dynamic value; refs synolia/SyliusGDPRPlugin#33

--- a/tests/PHPUnit/config/mappings/anon1.yml
+++ b/tests/PHPUnit/config/mappings/anon1.yml
@@ -8,3 +8,5 @@ Tests\Synolia\SyliusGDPRPlugin\PHPUnit\Fixtures\YamlFoo:
             value: 'test-yaml-value'
         nullValue:
             value: null
+        dynamicValue:
+            value: 'condescending-angel'
