fix(tests): mappings not overridable

--- a/tests/PHPUnit/config/mappings/anon1.yml
+++ b/tests/PHPUnit/config/mappings/anon1.yml
@@ -9,4 +9,4 @@ Tests\Synolia\SyliusGDPRPlugin\PHPUnit\Fixtures\YamlFoo:
         nullValue:
             value: null
         dynamicValue:
-            value: 'condescending-angel'
+            value: '@="anonymized-" ~ object.getId() ~ "@domain+1.xyz"'
