--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "php": "^8.2",
         "php-http/message-factory": "^1.1",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "sylius/sylius": "^1.12",
-        "symfony/property-info": "^6.4"
+        "sylius/sylius": "^2.0",
+        "symfony/property-info": "^6.4|^7.0"
     },
     "require-dev": {
         "j13k/yaml-lint": "^1.1",
