--- a/.github/workflows/sylius.yaml
+++ b/.github/workflows/sylius.yaml
@@ -26,6 +26,10 @@ jobs:
                     - 6.4
                 node:
                     - 20.x
+                exclude:
+                    -
+                        sylius: 2.0.0
+                        symfony: 5.4
         env:
             APP_ENV: test
             package-name: synolia/sylius-gdpr-plugin
@@ -45,14 +49,14 @@ jobs:
                 with:
                     node-version: '${{ matrix.node }}'
             -
-                uses: actions/checkout@v3
+                uses: actions/checkout@v4
             -
                 name: 'Composer - Get Cache Directory'
                 id: composer-cache
                 run: 'echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT'
             -
                 name: 'Composer - Set cache'
-                uses: actions/cache@v3
+                uses: actions/cache@v4
                 id: cache-composer
                 with:
                     path: '${{ steps.composer-cache.outputs.dir }}'
@@ -71,7 +75,7 @@ jobs:
                 run: 'echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT'
             -
                 name: 'Yarn - Set Cache'
-                uses: actions/cache@v3
+                uses: actions/cache@v4
                 with:
                     path: '${{ steps.yarn-cache.outputs.dir }}'
                     key: 'node-${{ matrix.node }}-yarn-${{ hashFiles(''**/package.json **/yarn.lock'') }}'
