--- a/src/Resources/config/mappings/ShopUser.yaml
+++ b/src/Resources/config/mappings/ShopUser.yaml
@@ -22,11 +22,11 @@ Sylius\Component\Core\Model\ShopUser:
             faker: dateTime
         verifiedAt:
             faker: dateTime
-        locked:
-            faker: boolean
-            args: [100]
-        credentialsExpireAt:
-            faker: dateTime
+#        locked:
+#            faker: boolean
+#            args: [100]
+#        credentialsExpireAt:
+#            faker: dateTime
         email:
             faker: email
             unique: true
