--- a/.github/workflows/sylius.yaml
+++ b/.github/workflows/sylius.yaml
@@ -2,7 +2,7 @@ name: Install & Test
 'on':
     push:
         branches:
-            - master
+            - main
         paths-ignore:
             - README.md
     pull_request:
@@ -16,23 +16,16 @@ jobs:
             fail-fast: false
             matrix:
                 php:
-                    - 8.0
                     - 8.2
+                    - 8.3
                 sylius:
-                    - 1.10.0
                     - 1.12.0
+                    - 1.13.0
+                    - 1.14.0
                 symfony:
-                    - 5.4
-                    - 6.2
+                    - 6.4
                 node:
                     - 14.x
-                exclude:
-                    -
-                        sylius: 1.10.0
-                        symfony: 6.2
-                    -
-                        php: '8.0'
-                        symfony: 6.2
         env:
             APP_ENV: test
             package-name: synolia/sylius-gdpr-plugin
