--- a/composer.json
+++ b/composer.json
@@ -11,33 +11,33 @@
     ],
     "license": "EUPL-1.2",
     "require": {
-        "php": "^8.0",
+        "php": "^8.2",
         "php-http/message-factory": "^1.1",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "sylius/sylius": "^1.10",
-        "symfony/property-info": "^5.4|^6.0"
+        "sylius/sylius": "^1.12",
+        "symfony/property-info": "^6.4"
     },
     "require-dev": {
-        "j13k/yaml-lint": "1.1.4",
-        "php-parallel-lint/php-parallel-lint": "1.3.2",
-        "phpmd/phpmd": "2.13.0",
-        "phpro/grumphp": "1.15.0",
-        "phpstan/extension-installer": "1.2.0",
-        "phpstan/phpstan": "1.9.7",
-        "phpstan/phpstan-doctrine": "1.3.29",
-        "phpstan/phpstan-strict-rules": "1.4.4",
-        "phpstan/phpstan-webmozart-assert": "1.2.2",
-        "phpunit/phpunit": "9.5.27",
-        "povils/phpmnd": "3.0.1",
-        "rector/rector": "^0.15.2",
-        "seld/jsonlint": "1.9.0",
-        "sylius-labs/coding-standard": "4.3.0",
-        "symfony/browser-kit": "6.0.11",
-        "symfony/debug-bundle": "6.0.11",
-        "symfony/dotenv": "6.0.5",
-        "symfony/intl": "6.0.15",
-        "symfony/web-profiler-bundle": "6.0.17",
-        "thecodingmachine/phpstan-strict-rules": "1.0.0"
+        "j13k/yaml-lint": "^1.1",
+        "php-parallel-lint/php-parallel-lint": "^1.4",
+        "phpmd/phpmd": "^2.15.0",
+        "phpro/grumphp": "^2.9",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2.0",
+        "phpstan/phpstan-webmozart-assert": "^2.0",
+        "phpunit/phpunit": "^9.5",
+        "povils/phpmnd": "^3.0",
+        "rector/rector": "^2.0",
+        "seld/jsonlint": "^1.11",
+        "squizlabs/php_codesniffer": "^3.11",
+        "sylius-labs/coding-standard": "^4.3",
+        "symfony/browser-kit": "^6.4",
+        "symfony/debug-bundle": "^6.4",
+        "symfony/dotenv": "^6.4",
+        "symfony/intl": "^6.4",
+        "symfony/web-profiler-bundle": "^6.4"
     },
     "config": {
         "sort-packages": true,
