--- a/install/Application/config/routes/gdpr.yaml
+++ b/install/Application/config/routes/gdpr.yaml
@@ -1,2 +1,3 @@
 synolia_gdpr:
-    resource: "@SynoliaSyliusGDPRPlugin/Resources/config/routes.yaml"
+    resource: "@SynoliaSyliusGDPRPlugin/config/routes/attributes.yaml"
+    prefix: '/%sylius_admin.path_name%'
