chore(sf): rollback directory structure to avoid bc breaks keep it instead for a new major version

--- a/src/Resources/config/routes.yaml
+++ b/src/Resources/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../../src/Controller/
+        path: ../../Controller/
         namespace: Synolia\SyliusGDPRPlugin\Controller
     type: attribute
