--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -2,7 +2,8 @@ services:
     _defaults:
         autowire: true
         autoconfigure: true
+        public: false
 
     Synolia\SyliusGDPRPlugin\:
-        resource: '../src/*'
-        exclude: '../src/{SynoliaSyliusGDPRPlugin.php}'
+        resource: '../../*'
+        exclude: '../../{SynoliaSyliusGDPRPlugin.php}'
